# CDDAMusicJson

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CDDAFileFncs/: CDDAFileFncs.cpp  CMakeLists.txt
CDDAFileFncs/include/: CDDAFileFncs.hpp
CDDAMusicJson/: CDDAMusicJson.cpp  CMakeLists.txt
CDDAMusicJson/include/: CDDAMusicJson.hpp
